--- a/FontCraft/Properties/Resources.resx
+++ b/FontCraft/Properties/Resources.resx
@@ -121,8 +121,29 @@
   <data name="background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\background.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bold_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bold-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="browse_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\browse-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="browse_font_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\browse_font-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edit_font_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edit_font-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="export_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\export-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_mini_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon-mini-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="italic_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\italic-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="layout1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\layout1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
