--- a/FontCraft/Properties/Resources.resx
+++ b/FontCraft/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="browse_font_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\browse_font-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="craft_icon_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\craft_icon-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="edit_font_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_font-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -150,5 +153,17 @@
   </data>
   <data name="layout2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\layout2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="redo_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\redo-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="redo_disabled_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\redo_disabled-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="undo_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\undo-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="undo_disabled_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\undo_disabled-8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
